# sensserver

./: CMakeLists.txt  appthread.cpp  appthread.h  audiothread.cpp  audiothread.h  main.cpp  sensorthread.cpp  sensorthread.h  sensserver  sensserver.cbp  senstelnet.cpp  senstelnet.h  streamthread.cpp  streamthread.h
